--- a/css/kasper.css
+++ b/css/kasper.css
@@ -759,7 +759,7 @@ header nav .form i {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
     text-align: center;
-    background-image: url(/Users/MoGhalep/Documents/Kaspar/images/stats.png);
+    background-image: url(../images/stats.png);
     background-size: cover;
     position: relative;
 }
