--- a/css/kasper.css
+++ b/css/kasper.css
@@ -266,6 +266,7 @@ header nav .form i {
 }
 
 .landing .overlay {
+    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
@@ -997,15 +998,294 @@ header nav .form i {
 }
 
 
-/* @media (max-width:768px) {
-    .skills-section .container {
+/* End Testimonials */
+
+
+/* Start Quote */
+
+.quote {
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+    background-image: url(../images/quote.jpg);
+    background-size: cover;
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.quote::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgb(0, 0, 0, 75%);
+}
+
+.quote .container {
+    position: relative;
+}
+
+.quote q {
+    font-size: 25px;
+    margin-bottom: 20px;
+    display: block;
+    text-transform: uppercase;
+}
+
+.quote sapan {
+    font-size: 13px;
+}
+
+
+/* End Quote */
+
+
+/* Start Pricing */
+
+.pricing {
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+}
+
+.pricing .container .plans {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 30px;
+}
+
+.pricing .container .plans .plan {
+    background-color: #dbdbdb12;
+    text-align: center;
+    color: var(--sec-color);
+    border-top: 1px solid var(--main-color);
+    border-bottom: 1px solid var(--main-color);
+}
+
+.pricing .container .plans .plan .head {
+    padding: 40px 20px;
+    border-bottom: 1px solid var(--main-color);
+    text-align: center;
+}
+
+.pricing .container .plans .plan h3 {
+    font-weight: normal;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+}
+
+.pricing .container .plans .plan .head span {
+    font-size: 60px;
+    font-weight: bold;
+    position: relative;
+}
+
+.pricing .container .plans .head span::before {
+    content: "$";
+    position: absolute;
+    font-size: 20px;
+    top: 10px;
+    left: -20px;
+}
+
+.pricing .container .plans span::after {
+    content: "/Mo";
+    position: absolute;
+    bottom: 15px;
+    right: -50px;
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.pricing .container .plans .plan ul {
+    border-bottom: 1px solid var(--main-color);
+}
+
+.pricing .container .plans .plan ul li {
+    padding: 30px;
+    position: relative;
+}
+
+.pricing .container .plans .plan ul li:not(:last-child)::after {
+    content: "";
+    width: 120px;
+    height: 1px;
+    position: absolute;
+    background-color: var(--main-color);
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
+.pricing .container .plans .plan a {
+    text-decoration: none;
+    display: block;
+    padding: 15px 45px;
+    margin: 30px auto;
+    color: var(--sec-color);
+    border: 1px solid var(--main-color);
+    width: fit-content;
+    transition: .3s ease-in-out;
+    -webkit-transition: .3s ease-in-out;
+    -moz-transition: .3s ease-in-out;
+    -ms-transition: .3s ease-in-out;
+    -o-transition: .3s ease-in-out;
+}
+
+.pricing .container .plans .plan a:hover {
+    background-color: var(--main-color);
+}
+
+.pricing .container .contact {
+    text-align: center;
+    margin: 100px auto;
+}
+
+.pricing .container .contact h3 {
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.pricing .container .contact a {
+    text-decoration: none;
+    margin-top: 55px;
+    display: block;
+    padding: 15px 45px;
+    width: fit-content;
+    color: white;
+    background-color: var(--main-color);
+    transition: .3s ease-in-out;
+    -webkit-transition: .3s ease-in-out;
+    -moz-transition: .3s ease-in-out;
+    -ms-transition: .3s ease-in-out;
+    -o-transition: .3s ease-in-out;
+}
+
+.pricing .container .contact a:hover {
+    background-color: #19c8fab8;
+}
+
+
+/* End Pricing */
+
+
+/* Start Subscribe */
+
+.subscribe {
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+    background-image: url(/images/subscribe.jpg);
+    background-size: cover;
+    position: relative;
+}
+
+.subscribe::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgb(0, 0, 0, 60%);
+}
+
+.subscribe .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.subscribe .container>div {
+    flex: 45%;
+}
+
+.subscribe .container .sub {
+    position: relative;
+}
+
+.subscribe .container .sub input {
+    width: 550px;
+    height: 60px;
+    padding-left: 55px;
+    font-size: 13px;
+    color: white;
+    text-transform: uppercase;
+    background-color: transparent;
+    outline: none;
+    border: 1px solid white;
+}
+
+.subscribe .container .sub i {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    left: 15px;
+    top: 30px;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+}
+
+.subscribe .container .sub a {
+    text-decoration: none;
+    padding: 20px 40px;
+    background-color: var(--main-color);
+    color: white;
+    text-transform: uppercase;
+    position: absolute;
+    right: 21px;
+    top: 1px;
+}
+
+.subscribe .container .text p {
+    color: white;
+    line-height: 2;
+}
+
+@media (max-width:768px) {
+    .subscribe .container .sub input {
+        width: 350px;
+    }
+}
+
+@media (max-width:1190px) {
+    .subscribe .container {
         flex-direction: column;
+    }
+    .subscribe .container .sub input {
+        margin-bottom: 45px;
+    }
+    .subscribe .container .sub a {
+        right: 1px;
+    }
+    .subscribe .container .text p {
         text-align: center;
+    }
+}
+
+
+/* @media (max-width:1190px) {
+    .subscribe .container {
+        flex-direction: column;
+    }
+    .subscribe .container .sub input {
+        margin-bottom: 45px;
+    }
+    .subscribe .container .sub a {
+        right: 1px;
     }
 } */
 
 
-/* End Testimonials */
+/* End Subscribe */
 
 
 /* End My Css */
